2 canvas layers, not yet stacked

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </div> -->
     </div>
 
+    <canvas class="draw"></canvas>
     <canvas class="photo"></canvas>
     <video class="player"></video>
     <div class="strip"></div>
